Término de HTML Efactura

--- a/cobranzas.html
+++ b/cobranzas.html
@@ -131,185 +131,58 @@
     <div class="container solutions-sections">
         <div class="row">
             <div class="col-lg-12">
-                <h1>E-Commerce</h1>
+                <h1>Gestión de Cobranzas</h1>
                 <hr>
-                <p>El comercio electrónico, también conocido como e-commerce, es la compra-venta de productos o servicios a través de plataformas digitales, y está cobrando cada vez más relevancia no sólo en el comercio B2C (ventas a consumidor final) sino
-                    también en el B2B (ventas a empresas).</p>
-                <p>Nuestra solución de eCommerce permite que pueda ofrecer sus productos y/o servicios en una tienda virtual en la web e, integrado con nuestra solución KwARP-ERP, también en una tienda física (local), administrando un único stock y base
-                    de productos, disminuyendo no sólo el tiempo empleado en administración sino también la posibilidad de errores. Permite manejar <b>múltiples listas de precios con o sin markup, programar ofertas</b>, ofrecer <b>múltiples medios de pago</b>                    y que sus clientes puedan comprar de un modo sencillo y eficiente.</p>
+                <p>Nuestro crecimiento está limitado por el capital de trabajo con el que contamos. Si no somos eficientes en nuestra gestión de cobranzas, estamos fundamentalmente poniendo un techo a nuestra posibilidad de expansión.</p>
+                <p>KwARP-ERP es una solución <b>online</b> que permite, mejora y facilita el seguimiento en el recupero de las carteras morosas de empresas, entidades financieras y organismos públicos.</p>
+                <p>Posibilita tener en línea toda la información de la cartera morosa y la gestión realizada en su totalidad, lo que representa un factor de mejora para las entidades que adoptan esta herramienta.</p>
+                <p>Gestión de Mora Preventiva, Mora Temprana, Mora Tardía o Pre Judicial y los Procesos Judiciales posteriores.</p>
+                <p>Utiliza Herramientas CRM de Gestión integrada, Seguimiento Telefónico, Emails, Cartas Documentadas y Visitas Domiciliarias.</p>
                 <br><br>
-                <h1>¿Qué puede hacer con KwARP-ERP?</h1>
+                <h1>Razones para utilizar KwARP-ERP en su gestión de cobranzas</h1>
                 <hr>
-                <p>Algunas de las tareas que puede hacer con KwARP-ERP y que lo ayudarán en la gestión de ventas en sucursal y en línea (web):</p>
+                <ul class="list-unstyled li-space-lg">
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Solución web (cloud) que permite gestionar las cuentas desde cualquier lugar.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Asignación de Tareas para evitar superposición entre diferentes gestores.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Comunicados automáticos a clientes.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Alertas para usted.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Múltiples medios de cobro: tarjetas de crédito y débito, pagos web y ATM (Pago Fácil, RapiPago, Pago Mis Cuentas, Mercado Pago, Dinero Mail), débito automático, por cbu, facilitan a sus clientes el proceso de pago .</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Automatización de Workflow.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Priorización de cuentas a gestionar.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Asignación de Tareas.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Indicadores y Reportes que permiten un panorama claro y orientan los esfuerzos de su equipo en la dirección correcta.</div>
+                    </li>
+                </ul>
+                <br>
+                <p>Una solución con más de 30 años en el mercado, que conjuga la <b>solidez</b> de la <b>experiencia</b> con la <b>flexibilidad</b> de la <b>innovación</b>.</p>
             </div>
             <!-- end of col -->
-
-            <div class="col-lg-4">
-                <ul class="list-unstyled li-space-lg">
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Alta, Baja y Modificación de Artículos.</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Facturación con Teclado o Lector de Código de Barras.</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Exportación de Pedidos.</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Consulta de Precios.</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Fraccionamiento de Artículos.</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Módulo de Ofertas Programable (3×2 / 4×3)</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Módulo de Gestión de Cobranzas y/o Deudores.</div>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-lg-4">
-                <ul class="list-unstyled li-space-lg">
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Módulo Contable.</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Actualización de Precios por Marca, por Rubro, por SubRubro, por Grupos, CSV, de Precios (Público y Costo).</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Transferencia de Artículos o Carga de Remitos de Proveedores.</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Posibilidad de Generar Remitos, Pedidos y Facturas desde tu celular.</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Listado de Artículos por Reposición.</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Estadística de Stock en Sucursales Valorizadas.</div>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-lg-4">
-                <ul class="list-unstyled li-space-lg">
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Múltiples almacenes por sucursal.</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Stock Valorizado con Rentabilidad.</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Informe de Ventas por Marca.</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Informe de Ventas en Unidades por Línea.</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Informe de Ventas Valorizadas con Rentabilidad.</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Informe de Compras en Unidades por Línea.</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Fabricación / producción de artículos.</div>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="col-lg-12">
-                <br>
-                <p>Permite ofrecer múltiples <b>medios de pago</b>:</p>
-                <ul class="list-unstyled li-space-lg">
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Efectivo, por ejemplo abona al servicio de mensajería al recibir el pedido, registrando el pago en forma <b>manual</b>.</div>
-                    </li>
-                </ul>
-                <br>
-                <p>y también en forma <b>automática</b> a través de:</p>
-            </div>
-            <div class="col-lg-6">
-                <ul class="list-unstyled li-space-lg">
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Tarjetas de débito y crédito (American Express, Mastercard, VISA, Carta Franca, Italcred, Diners, Cabal, Credencial, Naranja, consúltenos por otras!).</div>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-lg-6">
-                <ul class="list-unstyled li-space-lg">
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Pagos Web y ATM (PagoFacil, RapiPago, Pago Mis Cuentas, MercadoPago, DineroMail), transferencias por CBU.</div>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="col-lg-12">
-                <br>
-                <p>Además, puede realizar:</p>
-            </div>
-            <div class="col-lg-4">
-                <ul class="list-unstyled li-space-lg">
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Seguimiento de Valores</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Recibos</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Reportes que le permitirán optimizar su negocio</div>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-lg-4">
-                <ul class="list-unstyled li-space-lg">
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Imputaciones</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Gestión de Mora</div>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-lg-4">
-                <ul class="list-unstyled li-space-lg">
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Cierres de Caja</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Bancos (Cuentas)</div>
-                    </li>
-                </ul>
-            </div>
         </div>
         <!-- end of row -->
     </div>
