--- a/efactura.html
+++ b/efactura.html
@@ -358,11 +358,29 @@
     </div>
 
     <!-- Efacturas Lightbox -->
-    <div id="efacturas-lightbox" class="lightbox-basic zoom-anim-dialog mfp-hide">
+    <div id="efactura-lightbox" class="lightbox-basic zoom-anim-dialog mfp-hide">
         <div class="row">
             <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
             <div class="col-lg-12">
-
+                <h1>¿Qué es la factura electrónica?</h1><br>
+                <p>La factura electrónica se diferencia de la factura en papel por la manera en que se gestiona, valida y envía:</p>
+                <ul class="list-unstyled li-space-lg">
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Se gestiona a través de equipos informáticos.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Se valida electrónicamente vía internet.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Se pone a disposición mediante un sistema digital, por el cual el vendedor podrá enviar electrónicamente al comprador el documento que respalda la venta o la provisión del servicio.</div>
+                    </li>
+                </ul>
+                <br>
+                <p>Todo este conjunto de actividades permite garantizar la autenticidad y la integridad del documento electrónico, además de representar una importante
+                    <a class="popup-with-move-anim" href="#reduccioncostos-lightbox">reducción de costos</a>.</p>
             </div>
             <!-- end of col -->
         </div>
@@ -375,7 +393,55 @@
         <div class="row">
             <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
             <div class="col-lg-12">
-
+                <h1>Factura electrónica corporativa</h1><br>
+            </div>
+            <div class="col-lg-4">
+                <ul class="list-unstyled li-space-lg">
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Ahorro de la impresión en papel (100% de ahorro)</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Disminución en los costos de distribución de facturas (95% de ahorro)</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Disminución en las horas hombres debido a la automatización de los procesos de facturación y en las tareas de imputación de operaciones (90% de ahorro)</div>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-lg-4">
+                <ul class="list-unstyled li-space-lg">
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Oportunidad en la información, tanto en la recepción como en el envío (80% de ahorro)</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Facilidad en los procesos de auditoría (90% de ahorro)</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Mayor seguridad en el resguardo de los documentos (95% de ahorro)</div>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-lg-4">
+                <ul class="list-unstyled li-space-lg">
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Menor probabilidad de falsificación (100% de ahorro)</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Agilidad en la localización de información (95% de ahorro)</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Eliminación de espacios para almacenar documentos históricos (99% de ahorro)</div>
+                    </li>
+                </ul>
             </div>
             <!-- end of col -->
         </div>
@@ -388,7 +454,9 @@
         <div class="row">
             <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
             <div class="col-lg-12">
-
+                <h1>Factura electrónica corporativa</h1><br>
+                <p>Factura Electrónica Corporativa es un servicio que gestiona y obtiene el CAE de facturas generadas por el software de gestión que ya se encuentra operativo en la empresa. Nuestra solución <b>se integra con todo tipo de soluciones informáticas</b>,
+                    y mediante procedimientos de intercambio de información, basados en Web Services y/o archivos planos, resuelve la gestión del CAE y la puesta a disposición de la factura hacia el cliente.</p>
             </div>
             <!-- end of col -->
         </div>
@@ -401,7 +469,12 @@
         <div class="row">
             <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
             <div class="col-lg-12">
-
+                <h1>Facturación Automática / Lote / Recurrente</h1><br>
+                <p>Nuestro módulo de "Facturación por lote" está pensado para generar, en una única operación y de forma automática, un conjunto de facturas basadas en abonos mensuales o la frecuencia que se requiera, pudiendo indicarse la misma en cada
+                    cliente.
+                </p>
+                <p>Este tipo de facturación puede integrarse con nuestra solución para <a class="popup-with-move-anim" href="#efactura-lightbox">factura electrónica</a> y es típicamente utilizada por las empresas de servicios que cobran un abono, por ejemplo
+                    autopistas, como prestadoras de servicios de internet, abogados, contadores, consultoras, instituciones educativas y deportivas, servicios de salud, aseguradoras, etc.</p>
             </div>
             <!-- end of col -->
         </div>
