--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="parking.html">Parking y control de acceso</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="efactura.html">Factura electrónica</a>
+                            <a class="dropdown-item" href="efactura.html">Facturación</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="cobranzas.html">Cobranzas</a>
                             <div class="dropdown-divider"></div>
