--- a/index.html
+++ b/index.html
@@ -28,24 +28,6 @@
 
     <!-- Favicon  -->
     <link rel="icon" href="images/favicon.png">
-    <!-- Google Tag Manager -->
-    <script>
-        (function(w, d, s, l, i) {
-            w[l] = w[l] || [];
-            w[l].push({
-                'gtm.start': new Date().getTime(),
-                event: 'gtm.js'
-            });
-            var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s),
-                dl = l != 'dataLayer' ? '&l=' + l : '';
-            j.async = true;
-            j.src =
-                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-            f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-59QVKWM');
-    </script>
-    <!-- End Google Tag Manager -->
 
     <script>
         (function(i, s, o, g, r, a, m) {
@@ -254,7 +236,7 @@
                             <img class="img-fluid" src="images/services-icon-6.png" alt="Medida">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Desarollos a medida</h5>
+                            <h5 class="card-title">Desarrollos a medida</h5>
                             <!--<p>Automatización y gestión de estacionamientos.</p>--><br/>
                             <a class="btn-solid-reg" href="contacto.html">Más</a>
                         </div>
