--- a/nosotros.html
+++ b/nosotros.html
@@ -24,6 +24,7 @@
     <!-- Favicon  -->
     <link rel="icon" href="images/favicon.png">
 
+    <!-- Google Analytics -->
     <script>
         (function(i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
@@ -40,9 +41,34 @@
         ga('create', 'UA-93072024-1', 'auto');
         ga('send', 'pageview');
     </script>
+    <!-- End Google Analytics -->
+
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-59QVKWM');
+    </script>
+    <!-- End Google Tag Manager -->
 </head>
 
 <body data-spy="scroll" data-target=".fixed-top">
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-59QVKWM"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-light">
