--- a/cobranzas.html
+++ b/cobranzas.html
@@ -141,7 +141,7 @@
             <div class="col-lg-12">
                 <h1>Gestión de Cobranzas</h1>
                 <hr>
-                <p>Nuestro crecimiento está limitado por el capital de trabajo con el que contamos. Si no somos eficientes en nuestra gestión de cobranzas, estamos fundamentalmente poniendo un techo a nuestra posibilidad de expansión.</p>
+                <p>El capital de trabajo con el que contamos puede limitar nuestro crecimiento. Si no somos eficientes en nuestra gestión de cobranzas, estamos potencialmente poniendo un techo a nuestra posibilidad de expansión</p>
                 <p>KwARP-ERP es una solución <b>online</b> que permite, mejora y facilita el seguimiento en el recupero de las carteras morosas de empresas, entidades financieras y organismos públicos.</p>
                 <p>Posibilita tener en línea toda la información de la cartera morosa y la gestión realizada en su totalidad, lo que representa un factor de mejora para las entidades que adoptan esta herramienta.</p>
                 <p>Gestión de Mora Preventiva, Mora Temprana, Mora Tardía o Pre Judicial y los Procesos Judiciales posteriores.</p>
