--- a/efactura.html
+++ b/efactura.html
@@ -401,7 +401,7 @@
         <div class="row">
             <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
             <div class="col-lg-12">
-                <h1>Factura electrónica corporativa</h1><br>
+                <h1>Ahorros de la factura electrónica</h1><br>
             </div>
             <div class="col-lg-4">
                 <ul class="list-unstyled li-space-lg">
