--- a/parking.html
+++ b/parking.html
@@ -172,7 +172,7 @@
                         </li>
                     </ul>
                 </div>
-                <p><a href="https://addsa.com.ar/estacionamiento-guiado.html">Estacionamiento Guiado</a></p>
+                <p><a href="contacto.html">Estacionamiento Guiado</a></p>
             </div>
             <div class="col-lg-6">
                 <ul class="list-unstyled li-space-lg">
