--- a/parking.html
+++ b/parking.html
@@ -56,7 +56,7 @@
                 dl = l != 'dataLayer' ? '&l=' + l : '';
             j.async = true;
             j.src =
-                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+                'https://googletagmanager.com/gtm.js?id=' + i + dl;
             f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-59QVKWM');
     </script>
@@ -66,7 +66,7 @@
 <body data-spy="scroll" data-target=".fixed-top">
 
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-59QVKWM"
+    <noscript><iframe src="https://googletagmanager.com/ns.html?id=GTM-59QVKWM"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
