--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- SEO Meta Tags -->
     <meta name="description" content="Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer.">
     <meta name="author" content="ADD S.A.">
-    <meta property="og:url" content="https://jazmingv.github.io/addsawebsitetest" />
+    <meta property="og:url" content="https://addsa.com.ar/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="A.D.D. S.A. || Optimizamos sus resultados" />
     <meta property="og:description" content="Agregamos valor a sus procesos productivos a través de la implementación de soluciones de software robustas e innovadoras." />
@@ -65,24 +65,24 @@
             <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="index.html#header">Home<span
+                        <a class="nav-link" href="index.html#header">Home<span
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Soluciones</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item" href="erp.html">ERP</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="parking.html">Parking y control de acceso</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="efactura.html">Facturación</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="cobranzas.html">Cobranzas</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="ecommerce.html">E-Commerce</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="contacto.html">Desarrollos a Medida</a>
-                        </div>
+                        <div class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Soluciones</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdown01">
+                                <a class="dropdown-item" href="erp.html">ERP</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="parking.html">Parking y control de acceso</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="efactura.html">Facturación</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="cobranzas.html">Cobranzas</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="ecommerce.html">E-Commerce</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="contacto.html">Desarrollos a Medida</a>
+                            </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="parking.html#services">Productos</a>
@@ -91,23 +91,23 @@
                         <a class="nav-link page-scroll" href="index.html#clientes">Clientes</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nosotros</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item" href="nosotros.html">Quienes somos</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="nosotros.html#misionvision">Misión y Visión</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="nosotros.html#principios">Principios</a>
-                        </div>
+                        <div class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nosotros</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdown01">
+                                <a class="dropdown-item" href="nosotros.html">Quienes somos</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="nosotros.html#misionvision">Misión y Visión</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="nosotros.html#principios">Principios</a>
+                            </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
-            </div>
-            <!-- end of navbar-collapse -->
-        </div>
-        <!-- end of container -->
+                </div>
+                <!-- end of navbar-collapse -->
+                </div>
+                <!-- end of container -->
     </nav>
     <!-- end of navbar -->
     <!-- end of navigation -->
