Warnings & Errors Debugg

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item dropdown">
-                        <div class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Soluciones</a>
-                            <div class="dropdown-menu" aria-labelledby="dropdown01">
+                        <div class="nav-link dropdown-toggle" id="dropdown-solutions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Soluciones</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdown-solutions">
                                 <a class="dropdown-item" href="erp.html">ERP</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="parking.html">Parking y control de acceso</a>
@@ -83,6 +83,7 @@
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="contacto.html">Desarrollos a Medida</a>
                             </div>
+                        </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="parking.html#services">Productos</a>
@@ -91,23 +92,24 @@
                         <a class="nav-link page-scroll" href="index.html#clientes">Clientes</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <div class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nosotros</a>
-                            <div class="dropdown-menu" aria-labelledby="dropdown01">
-                                <a class="dropdown-item" href="nosotros.html">Quienes somos</a>
+                        <div class="nav-link dropdown-toggle" id="dropdown-us" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nosotros</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdown-us">
+                                <a class="dropdown-item" href="nosotros.html">Quienes soomos</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="nosotros.html#misionvision">Misión y Visión</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="nosotros.html#principios">Principios</a>
                             </div>
+                        </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
-                </div>
-                <!-- end of navbar-collapse -->
-                </div>
-                <!-- end of container -->
+            </div>
+            <!-- end of navbar-collapse -->
+        </div>
+        <!-- end of container -->
     </nav>
     <!-- end of navbar -->
     <!-- end of navigation -->
@@ -314,89 +316,6 @@
     <!-- end of customers -->
 
 
-    <!-- Testimonials --
-    <div class="slider-2 ">
-        <div class="container ">
-            <div class="row ">
-                <div class="col-lg-6 ">
-                    <div class="image-container ">
-                        <img class="img-fluid " src="images/testimonials.svg " alt="alternative ">
-                    </div>
-                    -- end of image-container --
-                </div>
-                -- end of col --
-                <div class="col-lg-6 ">
-                    <h2>Testimonials</h2>
-
-                    -- Card Slider --
-                    <div class="slider-container ">
-                        <div class="swiper-container card-slider ">
-                            <div class="swiper-wrapper ">
-
-                                -- Slide --
-                                <div class="swiper-slide ">
-                                    <div class="card ">
-                                        <img class="card-image " src="images/testimonial-1.jpg " alt="alternative ">
-                                        <div class="card-body ">
-                                            <p class="testimonial-text ">Blah Blah Blah</p>
-                                            <p class="testimonial-author ">Jude Thorn - Designer</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                -- end of swiper-slide --
-                                -- end of slide --
-
-                                -- Slide --
-                                <div class="swiper-slide ">
-                                    <div class="card ">
-                                        <img class="card-image " src="images/testimonial-2.jpg " alt="alternative ">
-                                        <div class="card-body ">
-                                            <p class="testimonial-text ">Blah Blah Blah</p>
-                                            <p class="testimonial-author ">Marsha Singer - Developer</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                -- end of swiper-slide --
-                                -- end of slide --
-
-                                -- Slide --
-                                <div class="swiper-slide ">
-                                    <div class="card ">
-                                        <img class="card-image " src="images/testimonial-3.jpg " alt="alternative ">
-                                        <div class="card-body ">
-                                            <p class="testimonial-text ">Blah Blah Blah</p>
-                                            <p class="testimonial-author ">Roy Smith - Marketer</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                -- end of swiper-slide --
-                                -- end of slide --
-
-                            </div>
-                            -- end of swiper-wrapper --
-
-                            -- Add Arrows --
-                            <div class="swiper-button-next "></div>
-                            <div class="swiper-button-prev "></div>
-                            -- end of add arrows --
-
-                        </div>
-                        -- end of swiper-container --
-                    </div>
-                    -- end of slider-container --
-                    -- end of card slider --
-
-                </div>
-                -- end of col --
-            </div>
-            -- end of row --
-        </div>
-        -- end of container --
-    </div>
-    -- end of slider-2 --
-    -- end of testimonials -->
-
-
     <!-- Contact -->
     <div id="contact" class="form-2 bg-gray ">
         <div class="container ">
@@ -416,13 +335,13 @@
                 <div class="col-lg-6 ">
                     <div class="map-responsive ">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.8203520736247!2d-58.39008428491957!3d-34.608703980458216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac4b41af1c1%3A0x4b8c1fdbb6995699!2sRivadavia%201523%2C%20C1085%20CABA!5e0!3m2!1sen!2sar!4v1611790395011!5m2!1sen!2sar"
-                            title="Ubicación" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                            title="Ubicación" width="600" height="450" div class="nav-link dropdown-toggle" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     </div>
                 </div>
                 <!-- end of col -->
                 <div class="col-lg-6 form-iframe">
                     <!-- Contact Form -->
-                    <iframe src="https://worker.kwarp7.net/IO/PCF.aspx" title="Formulario de contacto" height="650px" width="100%" frameborder="0" style="border:0;"></iframe>
+                    <iframe src="https://worker.kwarp7.net/IO/PCF.aspx" title="Formulario de contacto" height="650" div class="nav-link dropdown-toggle" style="border:0;width:100%"></iframe>
                     <!-- end of contact form -->
                 </div>
                 <!-- end of col -->
