--- a/cobranzas.html
+++ b/cobranzas.html
@@ -69,19 +69,20 @@
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Soluciones</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item" href="erp.html">ERP</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="parking.html">Parking y control de acceso</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="efactura.html">Facturación</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="cobranzas.html">Cobranzas</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="ecommerce.html">E-Commerce</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="contacto.html">Desarrollos a Medida</a>
+                        <div class="nav-link dropdown-toggle" id="dropdown-solutions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Soluciones</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdown-solutions">
+                                <a class="dropdown-item" href="erp.html">ERP</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="parking.html">Parking y control de acceso</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="efactura.html">Facturación</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="cobranzas.html">Cobranzas</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="ecommerce.html">E-Commerce</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="contacto.html">Desarrollos a Medida</a>
+                            </div>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -91,13 +92,14 @@
                         <a class="nav-link page-scroll" href="index.html#clientes">Clientes</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nosotros</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item" href="nosotros.html">Quienes somos</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="nosotros.html#misionvision">Misión y Visión</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="nosotros.html#principios">Principios</a>
+                        <div class="nav-link dropdown-toggle" id="dropdown-us" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nosotros</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdown-us">
+                                <a class="dropdown-item" href="nosotros.html">Quienes soomos</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="nosotros.html#misionvision">Misión y Visión</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="nosotros.html#principios">Principios</a>
+                            </div>
                         </div>
                     </li>
                     <li class="nav-item">
