--- a/parking.html
+++ b/parking.html
@@ -8,6 +8,11 @@
     <!-- SEO Meta Tags -->
     <meta name="description" content="Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer.">
     <meta name="author" content="ADD S.A.">
+    <meta property="og:url" content="https://addsa.com.ar/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="A.D.D. S.A. || Optimizamos sus resultados" />
+    <meta property="og:description" content="Agregamos valor a sus procesos productivos a través de la implementación de soluciones de software robustas e innovadoras." />
+    <meta property="og:image" content="images/add-logo-markup.jpg" />
 
     <!-- Webpage Title -->
     <title>ADD S.A.</title>
